// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HotspotInteraction > Rendering > renders correct feedbacks 1`] = `
<div
  class="qti-instruction-container"
  dir=""
>
  <div
    aria-atomic="true"
    class="feedback info fullwidth"
    role="status"
  >
    
     
    <p>
      You need to select from 1 to 3 choices
    </p>
  </div>
  
</div>
`;

exports[`HotspotInteraction > Rendering > renders image & choices 1`] = `
<body>
  <div>
    
    <div
      aria-disabled="false"
      class="qti-interaction qti-blockInteraction qti-hotspotInteraction"
      dir=""
    >
      
       
      <div
        class="qti-instruction-container"
        dir=""
      >
        
      </div>
      
       
      <div
        class="qti-flow-container"
        tabindex="-1"
      >
        <div
          class="qti-block"
          tabindex="0"
        >
          
          <svg
            aria-labelledby="tao-desc-123"
            height="860"
            style="--shadow-filter-url: url(#tao-svg-123-filter-shadow);"
            version="1.1"
            viewBox="0 0 1213 860"
            width="1213"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:svgjs="http://svgjs.com/svgjs"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <desc
              id="tao-desc-123"
            >
              graphic interaction
            </desc>
            
            <defs>
              <filter
                filterUnits="userSpaceOnUse"
                id="tao-svg-123-filter-shadow"
              >
                <fedropshadow
                  dx="0"
                  dy="0"
                  flood-color="black"
                  stdDeviation="1.5"
                />
              </filter>
              <clippath
                id="SvgjsClipPath1003"
              >
                <polygon
                  points="112,491 190,482 193,551 106,549"
                />
              </clippath>
            </defs>
            
            <g
              class="image"
              transform="translate(0, 0)"
            >
              <image
                class="svg-image"
                height="860"
                href="graphic/map-of-the-europe.jpg"
                preserveAspectRatio="none"
                width="1213"
                x="0"
                y="0"
              />
              
              <g
                slot="content"
                tabindex="-1"
              >
                <g
                  class="hotspot-choice"
                  data-choice-key="hotspot_1"
                >
                  <g
                    aria-disabled="false"
                    aria-labelledby="tao-hotspot-choice-label-123"
                    class="shape"
                    role="button"
                    tabindex="-1"
                  >
                    <rect
                      class="shape-outer-border"
                      height="72"
                      width="72"
                      x="312"
                      y="344"
                    />
                    <rect
                      class="shape-inner-border"
                      height="60"
                      width="60"
                      x="318"
                      y="350"
                    />
                    <rect
                      class="shape-dashed-outline"
                      height="72"
                      width="72"
                      x="312"
                      y="344"
                    />
                    <circle
                      class="shape-checkmark"
                      cx="348"
                      cy="380"
                      r="10"
                    />
                  </g>
                  
                  <text
                    class="hidden"
                    id="tao-hotspot-choice-label-123"
                  >
                    , unselected toggle button, press enter or space to select, to move to next available option, use the arrow keys
                  </text>
                  
                </g>
                <g
                  class="hotspot-choice"
                  data-choice-key="hotspot_4"
                >
                  <g
                    aria-disabled="false"
                    aria-labelledby="tao-hotspot-choice-label-123"
                    class="shape poly"
                    role="button"
                    tabindex="-1"
                  >
                    <polygon
                      class="shape-shadow"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <polygon
                      class="shape-inner-border"
                      clip-path="url(#SvgjsClipPath1003)"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <polygon
                      class="shape-outer-border"
                      clip-path="url(#SvgjsClipPath1003)"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <polygon
                      class="shape-dashed-outline"
                      clip-path="url(#SvgjsClipPath1003)"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <polygon
                      class="shape-outline-cover"
                      clip-path="url(#SvgjsClipPath1003)"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <circle
                      class="shape-checkmark"
                      cx="159.3671875"
                      cy="518.1171875"
                      r="10"
                    />
                  </g>
                  
                  <text
                    class="hidden"
                    id="tao-hotspot-choice-label-123"
                  >
                    , unselected toggle button, press enter or space to select, to move to next available option, use the arrow keys
                  </text>
                  
                </g>
                <g
                  class="hotspot-choice"
                  data-choice-key="hotspot_5"
                >
                  <g
                    aria-disabled="false"
                    aria-labelledby="tao-hotspot-choice-label-123"
                    class="shape"
                    role="button"
                    tabindex="-1"
                  >
                    <ellipse
                      class="shape-outer-border"
                      cx="153"
                      cy="41"
                      rx="47"
                      ry="36"
                    />
                    <ellipse
                      class="shape-inner-border"
                      cx="153"
                      cy="41"
                      rx="41"
                      ry="30"
                    />
                    <ellipse
                      class="shape-dashed-outline"
                      cx="153"
                      cy="41"
                      rx="47"
                      ry="36"
                    />
                    <circle
                      class="shape-checkmark"
                      cx="153"
                      cy="41"
                      r="10"
                    />
                  </g>
                  
                  <text
                    class="hidden"
                    id="tao-hotspot-choice-label-123"
                  >
                    , unselected toggle button, press enter or space to select, to move to next available option, use the arrow keys
                  </text>
                  
                </g>
                <g
                  class="hotspot-choice"
                  data-choice-key="hotspot_6"
                >
                  <g
                    aria-disabled="false"
                    aria-labelledby="tao-hotspot-choice-label-123"
                    class="shape"
                    role="button"
                    tabindex="-1"
                  >
                    <circle
                      class="shape-outer-border"
                      cx="50"
                      cy="50"
                      r="46"
                    />
                    <circle
                      class="shape-inner-border"
                      cx="50"
                      cy="50"
                      r="40"
                    />
                    <circle
                      class="shape-dashed-outline"
                      cx="50"
                      cy="50"
                      r="46"
                    />
                    <circle
                      class="shape-checkmark"
                      cx="50"
                      cy="50"
                      r="10"
                    />
                  </g>
                  
                  <text
                    class="hidden"
                    id="tao-hotspot-choice-label-123"
                  >
                    , unselected toggle button, press enter or space to select, to move to next available option, use the arrow keys
                  </text>
                  
                </g>
                
              </g>
              
            </g>
          </svg>
          
          
        </div>
      </div>
    </div>
    
    
    
  </div>
</body>
`;

exports[`HotspotInteraction > Rendering > renders simple props into markup 1`] = `
<body>
  <div>
    
    <div
      aria-disabled="true"
      ariabar="baz"
      ariafoo="12"
      class="qti-interaction qti-blockInteraction qti-hotspotInteraction foo bar baz"
      data-baz="24"
      data-foo="bar"
      dir="rtl"
      id="interactionId"
      lang="hu"
      role="someUniqueRole"
    >
      
       
      <div
        class="qti-instruction-container"
        dir=""
      >
        
      </div>
      
       
      <div
        class="qti-flow-container"
        tabindex="-1"
      >
        <div
          class="qti-block"
          tabindex="0"
        >
          
          <svg
            aria-labelledby="tao-desc-123"
            height="860"
            style="--shadow-filter-url: url(#tao-svg-123-filter-shadow);"
            version="1.1"
            viewBox="0 0 1213 860"
            width="1213"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:svgjs="http://svgjs.com/svgjs"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <desc
              id="tao-desc-123"
            >
              graphic interaction
            </desc>
            
            <defs>
              <filter
                filterUnits="userSpaceOnUse"
                id="tao-svg-123-filter-shadow"
              >
                <fedropshadow
                  dx="0"
                  dy="0"
                  flood-color="black"
                  stdDeviation="1.5"
                />
              </filter>
            </defs>
            
            <g
              class="image"
              transform="translate(0, 0)"
            >
              <image
                class="svg-image"
                height="860"
                href="graphic/map-of-the-europe.jpg"
                preserveAspectRatio="none"
                width="1213"
                x="0"
                y="0"
              />
              
              <g
                slot="content"
                tabindex="-1"
              >
                
              </g>
              
            </g>
          </svg>
          
          
        </div>
      </div>
    </div>
    
    
    
  </div>
</body>
`;

exports[`HotspotInteraction > Rendering > renders the instruction lang 1`] = `
<body>
  <div>
    
    <div
      aria-disabled="false"
      class="qti-interaction qti-blockInteraction qti-hotspotInteraction"
      dir=""
    >
      
       
      <div
        class="qti-instruction-container"
        dir="ltr"
        lang="pt-br"
      >
        <div
          aria-atomic="true"
          class="feedback info fullwidth"
          role="status"
        >
          
           
          <p>
            You need to select from 1 to 3 choices
          </p>
        </div>
        
      </div>
      
       
      <div
        class="qti-flow-container"
        tabindex="-1"
      >
        <div
          class="qti-block"
          tabindex="0"
        >
          
          <svg
            aria-labelledby="tao-desc-123"
            height="860"
            style="--shadow-filter-url: url(#tao-svg-123-filter-shadow);"
            version="1.1"
            viewBox="0 0 1213 860"
            width="1213"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:svgjs="http://svgjs.com/svgjs"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <desc
              id="tao-desc-123"
            >
              graphic interaction
            </desc>
            
            <defs>
              <filter
                filterUnits="userSpaceOnUse"
                id="tao-svg-123-filter-shadow"
              >
                <fedropshadow
                  dx="0"
                  dy="0"
                  flood-color="black"
                  stdDeviation="1.5"
                />
              </filter>
              <clippath
                id="SvgjsClipPath1010"
              >
                <polygon
                  points="112,491 190,482 193,551 106,549"
                />
              </clippath>
            </defs>
            
            <g
              class="image"
              transform="translate(0, 0)"
            >
              <image
                class="svg-image"
                height="860"
                href="graphic/map-of-the-europe.jpg"
                preserveAspectRatio="none"
                width="1213"
                x="0"
                y="0"
              />
              
              <g
                slot="content"
                tabindex="-1"
              >
                <g
                  class="hotspot-choice"
                  data-choice-key="hotspot_1"
                >
                  <g
                    aria-disabled="false"
                    aria-labelledby="tao-hotspot-choice-label-123"
                    class="shape"
                    role="button"
                    tabindex="-1"
                  >
                    <rect
                      class="shape-outer-border"
                      height="72"
                      width="72"
                      x="312"
                      y="344"
                    />
                    <rect
                      class="shape-inner-border"
                      height="60"
                      width="60"
                      x="318"
                      y="350"
                    />
                    <rect
                      class="shape-dashed-outline"
                      height="72"
                      width="72"
                      x="312"
                      y="344"
                    />
                    <circle
                      class="shape-checkmark"
                      cx="348"
                      cy="380"
                      r="10"
                    />
                  </g>
                  
                  <text
                    class="hidden"
                    id="tao-hotspot-choice-label-123"
                    lang="pt-br"
                  >
                    , unselected toggle button, press enter or space to select, to move to next available option, use the arrow keys
                  </text>
                  
                </g>
                <g
                  class="hotspot-choice"
                  data-choice-key="hotspot_4"
                >
                  <g
                    aria-disabled="false"
                    aria-labelledby="tao-hotspot-choice-label-123"
                    class="shape poly"
                    role="button"
                    tabindex="-1"
                  >
                    <polygon
                      class="shape-shadow"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <polygon
                      class="shape-inner-border"
                      clip-path="url(#SvgjsClipPath1010)"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <polygon
                      class="shape-outer-border"
                      clip-path="url(#SvgjsClipPath1010)"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <polygon
                      class="shape-dashed-outline"
                      clip-path="url(#SvgjsClipPath1010)"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <polygon
                      class="shape-outline-cover"
                      clip-path="url(#SvgjsClipPath1010)"
                      points="112,491 190,482 193,551 106,549"
                    />
                    <circle
                      class="shape-checkmark"
                      cx="159.3671875"
                      cy="518.1171875"
                      r="10"
                    />
                  </g>
                  
                  <text
                    class="hidden"
                    id="tao-hotspot-choice-label-123"
                    lang="pt-br"
                  >
                    , unselected toggle button, press enter or space to select, to move to next available option, use the arrow keys
                  </text>
                  
                </g>
                <g
                  class="hotspot-choice"
                  data-choice-key="hotspot_5"
                >
                  <g
                    aria-disabled="false"
                    aria-labelledby="tao-hotspot-choice-label-123"
                    class="shape"
                    role="button"
                    tabindex="-1"
                  >
                    <ellipse
                      class="shape-outer-border"
                      cx="153"
                      cy="41"
                      rx="47"
                      ry="36"
                    />
                    <ellipse
                      class="shape-inner-border"
                      cx="153"
                      cy="41"
                      rx="41"
                      ry="30"
                    />
                    <ellipse
                      class="shape-dashed-outline"
                      cx="153"
                      cy="41"
                      rx="47"
                      ry="36"
                    />
                    <circle
                      class="shape-checkmark"
                      cx="153"
                      cy="41"
                      r="10"
                    />
                  </g>
                  
                  <text
                    class="hidden"
                    id="tao-hotspot-choice-label-123"
                    lang="pt-br"
                  >
                    , unselected toggle button, press enter or space to select, to move to next available option, use the arrow keys
                  </text>
                  
                </g>
                <g
                  class="hotspot-choice"
                  data-choice-key="hotspot_6"
                >
                  <g
                    aria-disabled="false"
                    aria-labelledby="tao-hotspot-choice-label-123"
                    class="shape"
                    role="button"
                    tabindex="-1"
                  >
                    <circle
                      class="shape-outer-border"
                      cx="50"
                      cy="50"
                      r="46"
                    />
                    <circle
                      class="shape-inner-border"
                      cx="50"
                      cy="50"
                      r="40"
                    />
                    <circle
                      class="shape-dashed-outline"
                      cx="50"
                      cy="50"
                      r="46"
                    />
                    <circle
                      class="shape-checkmark"
                      cx="50"
                      cy="50"
                      r="10"
                    />
                  </g>
                  
                  <text
                    class="hidden"
                    id="tao-hotspot-choice-label-123"
                    lang="pt-br"
                  >
                    , unselected toggle button, press enter or space to select, to move to next available option, use the arrow keys
                  </text>
                  
                </g>
                
              </g>
              
            </g>
          </svg>
          
          
        </div>
      </div>
    </div>
    
    
    
  </div>
</body>
`;
